--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -1,63 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: external-secrets
-  namespace: flux-system
-spec:
-  interval: 1m
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./apps/external-secrets
-  timeout: 2m
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: grafana
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: keycloak
-  interval: 1m
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./apps/grafana
-  timeout: 5m
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: keycloak
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: vault
-  interval: 1m
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./apps/keycloak
-  wait: true
-  timeout: 5m
-  retryInterval: 30s
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: vault
-  namespace: flux-system
-spec:
-  interval: 1m
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./apps/vault
-  timeout: 10m
-  wait: true
+resources:
+  - external-secrets
+  - vault
+  - keycloak
+  - grafana
