--- a/clusters/dev/kustomization.yaml
+++ b/clusters/dev/kustomization.yaml
@@ -1,12 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  namespace: flux-system
-spec:
-  interval: 1m0s
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./apps
-  timeout: 5m0s
+namespace: flux-system
+resources:
+  - ../../apps/kustomization/
+patches:
+  - path: cluster-patch.yaml
