--- a/clusters/local/apps/keycloak/release.yaml
+++ b/clusters/local/apps/keycloak/release.yaml
@@ -5,52 +5,24 @@ metadata:
   namespace: keycloak
 spec:
   interval: 10m
-  install:
-    createNamespace: true
   chart:
     spec:
       chart: keycloak
-      version: 25.x.x
+      version: ">=25.0.0 <26.0.0"
       sourceRef:
         kind: HelmRepository
         name: bitnami-oci
         namespace: flux-system
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   values:
     auth:
-      existingSecret: external-secrets/keycloak-admin # holt admin-user/pass aus K8s-Secret
+      adminUser: admin
+      existingSecret: keycloak-admin
       passwordSecretKey: admin-password
-      usernameSecretKey: admin-user
-
-  keycloakConfigCli:
-    enabled: true
-    # wir benutzen Variablenersetzung aus ENV (Secret 'grafana-oidc'):
-    extraEnvVars:
-      - name: IMPORT_VAR_SUBSTITUTION_ENABLED
-        value: "true"
-    extraEnvVarsSecret: external-secrets/grafana-oidc
-    # Realm/Client deklarativ anlegen:
-    configuration:
-      realm-dev.yaml: |
-        realm: dev
-        enabled: true
-        registrationAllowed: false
-        loginWithEmailAllowed: true
-        sslRequired: NONE
-        clients:
-          - clientId: ${GRAFANA_CLIENT_ID}
-            name: Grafana
-            enabled: true
-            protocol: openid-connect
-            publicClient: false
-            secret: ${GRAFANA_CLIENT_SECRET}
-            standardFlowEnabled: true
-            directAccessGrantsEnabled: false
-            redirectUris:
-              - "http://grafana.local/*"
-            baseUrl: "http://grafana.local"
-            rootUrl: "http://grafana.local"
-            attributes:
-              access.token.lifespan: "3600"
-        groups:
-          - name: grafana-admin
-          - name: grafana-editor
+    service:
+      type: ClusterIP
