--- a/clusters/local/infra/vault/kustomization.yaml
+++ b/clusters/local/infra/vault/kustomization.yaml
@@ -1,6 +1,15 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-resources:
-  - repo.yaml
-  - helmrelease-vault.yaml
-  - helmrelease-external-secrets.yaml
+metadata:
+  name: infra-vault
+  namespace: flux-system
+spec:
+  interval: 10m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infra/vault
+  prune: true
+  dependsOn:
+    - name: infra-namespaces
+  wait: true
