--- a/clusters/local/flux-kustomizations.yaml
+++ b/clusters/local/flux-kustomizations.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 10m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system # kommt vom bootstrap!
   path: ./infra/namespaces
   prune: true
   wait: true
