--- a/infra/vault/kustomization.yaml
+++ b/infra/vault/kustomization.yaml
@@ -1,15 +1,6 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: infra-vault
-  namespace: flux-system
-spec:
-  interval: 10m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./infra/vault
-  prune: true
-  dependsOn:
-    - name: infra-namespaces
-  wait: true
+resources:
+  - helmrelease-vault.yaml
+  - helmrelease-external-secrets.yaml
+  - repo.yaml
