--- a/infra/vault/helmrelease-external-secrets.yaml
+++ b/infra/vault/helmrelease-external-secrets.yaml
@@ -8,11 +8,11 @@ spec:
   chart:
     spec:
       chart: external-secrets
+      version: ">=0.19.2 <0.20.0"
       sourceRef:
         kind: HelmRepository
-        name: external-secrets-repo
+        name: external-secrets
         namespace: flux-system
-      # if you don't have HelmRepository named external-secrets-repo, add it pointing to https://charts.external-secrets.io
   install:
     remediation:
       retries: 3
