--- a/infra/vault/repo.yaml
+++ b/infra/vault/repo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: hashicorp
-  namespace: vault
+  namespace: flux-system
 spec:
   interval: 10m
   url: https://helm.releases.hashicorp.com
@@ -11,7 +11,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: external-secrets
-  namespace: external-secrets
+  namespace: flux-system
 spec:
   interval: 10m
   url: https://charts.external-secrets.io
