--- a/infra/vault/helmrelease-external-secrets.yaml
+++ b/infra/vault/helmrelease-external-secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: external-secrets
-  namespace: external-secrets
+  namespace: flux-system
 spec:
   interval: 10m
   chart:
