--- a/apps/keycloak/repo.yaml
+++ b/apps/keycloak/repo.yaml
@@ -1,9 +1,9 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: bitnami-oci
-  namespace: keycloak
+  namespace: flux-system
 spec:
-  interval: 10m
   type: oci
-  url: oci://registry-1.docker.io/bitnami
+  interval: 1h
+  url: oci://registry-1.docker.io/bitnamicharts
