--- a/apps/keycloak/external-secret-keycloak-admin.yaml
+++ b/apps/keycloak/external-secret-keycloak-admin.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: keycloak
 spec:
   secretStoreRef:
-    name: vault-backend
+    name: vault
     kind: ClusterSecretStore
   target:
     name: keycloak-admin
