--- a/apps/keycloak/external-secret-keycloak-admin.yaml
+++ b/apps/keycloak/external-secret-keycloak-admin.yaml
@@ -4,9 +4,10 @@ metadata:
   name: keycloak-admin
   namespace: keycloak
 spec:
+  refreshInterval: 2m0s
   secretStoreRef:
-    name: vault
     kind: ClusterSecretStore
+    name: vault
   target:
     name: keycloak-admin
     creationPolicy: Owner
