--- a/infra/vault/clustersecretstore.yaml
+++ b/infra/vault/clustersecretstore.yaml
@@ -1,11 +1,12 @@
-apiVersion: external-secrets.io/v1beta1
-kind: ClusterSecretStore
+apiVersion: external-secrets.io/v1
+kind: SecretStore
 metadata:
   name: vault
+  namespace: external-secrets
 spec:
   provider:
     vault:
-      server: "http://vault.vault.svc:8200"
+      server: "http://vault.vault.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
       auth:
