--- a/apps/keycloak/external-secret-keycloak-admin.yaml
+++ b/apps/keycloak/external-secret-keycloak-admin.yaml
@@ -14,5 +14,5 @@ spec:
   data:
     - secretKey: admin-password
       remoteRef:
-        key: secrets/keycloak
+        key: secrets/secret/keycloak
         property: admin-password
