--- a/apps/keycloak/external-secret-keycloak.yaml
+++ b/apps/keycloak/external-secret-keycloak.yaml
@@ -4,7 +4,7 @@ metadata:
   name: keycloak-admin
   namespace: keycloak
 spec:
-  refreshInterval: 2m0s
+  refreshInterval: 1h
   secretStoreRef:
     kind: ClusterSecretStore
     name: vault
@@ -14,5 +14,5 @@ spec:
   data:
     - secretKey: admin-password
       remoteRef:
-        key: secrets/secret/keycloak
+        key: keycloak # Vault-Pfad: secret/keycloak
         property: admin-password
