--- a/apps/keycloak/kustomization.yaml
+++ b/apps/keycloak/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 resources:
   - repo.yaml
   - helmrelease-keycloak.yaml
-  - external-secret-keycloak.yaml
+  - externalsecret.yaml
