--- a/clusters/local/flux-kustomizations.yaml
+++ b/clusters/local/flux-kustomizations.yaml
@@ -42,6 +42,7 @@ spec:
   prune: true
   dependsOn:
     - name: infra-vault
+    - name: infra-external-secrets
   wait: true
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
